--- a/thanks.html
+++ b/thanks.html
@@ -168,7 +168,7 @@
 <body>
 
     <div id="myDIV" class="header">
-        <img class="logo" src="/images/logo.png" alt="MAN" />
+        <img class="logo" src="/Man Truck.gif" alt="MAN" />
         <h1>YOU DID IT!</h1>
     </div>
 
