--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       body {
         margin: 0;
         min-width: 250px;
-        background: #273057;
+        background: #303C49;
       }
 
       * {
@@ -67,14 +67,14 @@
         position: relative;
         padding: 12px 8px 12px 40px;
         list-style-type: none;
-        background: darkslateblue;
+        background: rgb(75, 150, 210);
         font-size: 13px;
         transition: 0.2s;
-        border: 2px 2px 2px 0.5px solid #70767d;
-        border-top-style: 0.5px solid #70767d;
-        border-right-style: 0.5pxsolid #70767d;
+        border: 2px 2px 2px 0.5px solid rgb(175, 175, 175);
+        border-top-style: 0.5px solid rgb(175, 175, 175);
+        border-right-style: 0.5pxsolid rgb(175, 175, 175);
         border-bottom-style: none;
-        border-left-style: 0.5px solid #70767d;
+        border-left-style: 0.5px solid rgb(175, 175, 175);
         margin-top: 0.5px;
         margin: 10px;
         border-radius: 25px;
@@ -82,19 +82,19 @@
       }
 
       ul li:nth-child(odd) {
-        background: darkgray;
+        background: rgb(175, 175, 175);
       }
 
       ul li:nth-child(odd):hover {
-        background: darkslateblue;
+        background: #303C49;
       }
 
       ul li:hover {
-        background: darkgray;
+        background: rgb(175, 175, 175);
       }
 
       ul li.checked {
-        background: #273057;
+        background: #303C49;
         color: #fff;
         text-decoration: line-through;
         opacity: 0.4;
@@ -114,7 +114,7 @@
       }
 
       .header {
-        background-color: #273057;
+        background-color: #303C49;
         padding: 10px 40px;
         color: white;
         text-align: center;
@@ -184,7 +184,7 @@
         display: flex;
         margin: 0 auto;
         width: 150px;
-        filter: drop-shadow(1px 1px 10px white);
+        filter: drop-shadow(1px 1px 10px rgb(175, 175, 175));
       }
 
       input[type="file"] {
@@ -223,7 +223,7 @@
         font-size: 12px;
         border: 0px transparent;
         border-radius: 10px 0px 0px 10px;
-        background-color: #e40444;
+        background-color: #E40045;
         text-align: center;
       }
 
@@ -252,7 +252,7 @@
       }
 
       #progress-bar-container {
-        background-color: #273057;
+        background-color: #303C49;
         width: 100%;
         border-radius: 25px;
         margin-top: 20px;
@@ -261,7 +261,7 @@
       }
 
       #progress-bar {
-        background-color: #e40444;
+        background-color: #91B900;
         height: 20px;
         transition: width 0.5s linear;
         width: 0%;
